adiciona a pagina sobre

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MusicDot</title>
 </head>
 <body>
-    
+    <h1>MusicDot</h1>
+    <h2>Bem-vindo á MusicDot, seu portal de cursos de música online.</h2>
+    <ul>
+        <li>Confira nossas promoções.</li>
+        <li>Receba informações sobre nossos lançamentos por email.</li>
+        <li>Navegue por todos nossos cursos disponíveis.</li>
+        <li>Aprenda sem sair de casa.</li>
+    </ul>
+
+    <h3>Boa prática - Indentação</h3>
+    <p>Uma prática sempre recomendada, ligada à limpeza e utilizada para facilitar a leitura do código, 
+        é o uso correto de <strong>recuos</strong>, ou <strong>indentação</strong>, no HTML. Costumamos alinhar elementos "irmãos" na mesma 
+        margem e adicionar alguns espaços ou um tab para elementos "filhos".</p>
+    <p>A maioria dos exercícios dessa apostila utiliza um padrão recomendado de recuos.</p>
+
+    <h3>Boa prática - Comentários</h3>
+    <p>Quando iniciamos nosso projeto, utilizamos poucas tags HTML. Mais tarde adicionaremos uma quantidade razoável 
+        de elementos, o que pode gerar uma certa confusão. Para manter o código mais legível, é recomendada a adição 
+        de comentários antes da abertura e após do fechamento de tags estruturais (que conterão outras tags). 
+        Dessa maneira, nós podemos identificar claramente quando um elemento está <strong>dentro</strong> dessa estrutura ou <strong>depois</strong> dela.</p>
+
 </body>
 </html>
