Modificando um pouco o head

--- a/sobre.html
+++ b/sobre.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <link href="img/favicon.ico" rel="icon">
+    <link rel="stylesheet" href="css/teste.css">
+    <title>MusicDot | Sobre a Empresa</title>
+
 </head>
+
 <body>
     <img src="img/logo.svg" alt="Logo Musicdot">
 
