--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="img/favicon.ico" rel="icon">
-    <link rel="stylesheet" href="css/teste.css">
+    <link rel="stylesheet" href="css/sobre.css">
     <title>MusicDot | Sobre a Empresa</title>
 
 </head>
@@ -15,7 +15,7 @@
 
     <h1>Sobre a Empresa</h1>
 
-    <p>A Musicdot é a maior escola online de música em todo mundo. Fundada em 1932, possui
+    <p>A MusicDot é a maior escola online de música em todo mundo. Fundada em 1932, possui
         estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. 
     </p>
 
