--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <img src="img/logo.svg" alt="Logo Musicdot">
 
     <h1>Sobre a Empresa</h1>
@@ -19,7 +20,8 @@
         estúdios em 124 países, sendo líder de mercado com mais de 90% de participação em 118 deles. 
     </p>
 
-    <p>Nossa matriz fica em Mafra, em Santa Catarina. De lá, saem grande parte das gravações de 
+    <p>Nossa matriz fica em <a href="http://maps.google.com.br/?q=190,GabrielDequech,Mafra,SC" target="_blank">
+        Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de 
         nossos cursos. Nossa Matriz:
     </p>
 
@@ -28,11 +30,11 @@
         <figcaption>Matriz MusicDot</figcaption>
     </figure>
 
-    <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas.
-        Conheça também nossa história e nossos diferenciais.
+    <p>Assine os cursos da MusicDot. Acesse <a href="index.html">nosso site</a> ou entre em contato se tiver dúvidas.
+        Conheça também <a href="#historia">nossa história</a> e <a href="#diferencial">nossos diferenciais</a>.
     </p>
 
-    <h2>História</h2>
+    <h2 id="historia">História</h2>
 
     <figure>
         <img src="img/familia-tupfeln.jpg" alt="Família Tupfeln">
@@ -63,6 +65,18 @@
         as instalações da MusicDot, além de presidentes da União Européia, Ásia e o secretário-geral 
         da ONU.
     </p>
+
+    <h2>Diferenciais</h2>
+    <ul>
+        <li>Menor preço do mercado, garantido</li>
+        <li>Se você achar um serviço mais barato, leva 1 mês de graça</li>
+        <li>Pague em reais, dólares, euro, libras, dodgecoins, litecoins ou bitcoins</li>
+        <li>Todas as compras acompanham acesso à Alura</li>
+        <li>Maior escola de música online do mundo</li>
+        <li>Atendimento via telefone, email, chat, twitter, facebook, instagram, ICQ, WhatsApp, SMS, carta, fax</li>
+        <li>Presente em 124 países</li>
+        <li>Mais de um milhão de funcionários em todo o mundo</li>
+    </ul>
 
 </body>
 </html>
